--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/appsettings.json
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:ph-rainha-hml.database.windows.net,1433;Initial Catalog=ph-rainha;Persist Security Info=False;User ID=adm;Password=@Gh#140718;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:ph-rainha-hml.database.windows.net,1433;Initial Catalog=ph-rainha-hml;Persist Security Info=False;User ID=adm;Password=@Gh#140718;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
