--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/PromocaoHumana.Web.csproj
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/PromocaoHumana.Web.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.0" />
+    <PackageReference Include="Correios.CEP.Net" Version="1.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.10" />
@@ -40,6 +41,10 @@
     <Compile Remove="Data\Migrations\20210822233343_initial-database.Designer.cs" />
     <Compile Remove="Data\Migrations\20210822233429_initial-database.cs" />
     <Compile Remove="Data\Migrations\20210822233429_initial-database.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210827235658_Ajuste-na-familia.cs" />
+    <Compile Remove="Data\Migrations\20210827235658_Ajuste-na-familia.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210827235821_Ajuste-na-familia.cs" />
+    <Compile Remove="Data\Migrations\20210827235821_Ajuste-na-familia.Designer.cs" />
   </ItemGroup>
 
 </Project>
