Adicionado dominio Doação

--- a/src/PromocaoHumana.Web/PromocaoHumana.Web/PromocaoHumana.Web.csproj
+++ b/src/PromocaoHumana.Web/PromocaoHumana.Web/PromocaoHumana.Web.csproj
@@ -47,4 +47,8 @@
     <Compile Remove="Data\Migrations\20210827235821_Ajuste-na-familia.Designer.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Exceptions" />
+  </ItemGroup>
+
 </Project>
